# Tauri-mobile

./: .gitignore  index.html  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: http_client.rs  lib.rs  main.rs
src-tauri/src/api/: user.rs
src/components/: Home.jsx  LoginPage.jsx  MenuFloatingPage.jsx  Navbar.jsx  PreLoginPage.jsx  SignUpPage.jsx  TestingPage.jsx
src/styles/: LoginPage.css  MenuFloatingPage.css  Navbar.css  PreLoginPage.css  SignUpPage.css
